2002-04-01  Jessica Han  <jessica@cup.hp.com>

        * config/tc-ia64.c (ia64_cons_fix_new): Handle 8 byte iplt reloc
	in 32-bit mode.

2002-03-27  Andreas Schwab  <schwab@suse.de>

	* config/tc-i386.c (output_jump): Set fx_pcrel_adjust to size of
	field for pc-relative fixups.
	(output_disp): Likewise.
	(md_estimate_size_before_relax): Likewise.
	(tc_gen_reloc): Subtract fx_pcrel_adjust instead of fx_size for
	pc-relative fixups in 64bit mode.

2002-03-22  Alan Modra  <amodra@bigpond.net.au>

	* config/te-aix5.h: Typo fix.

2002-03-21  Alan Modra  <amodra@bigpond.net.au>

	* Makefile.am: Run "make dep-am".
	* Makefile.in: Regenerate.
	* doc/Makefile.in: Regenerate.

2002-03-20  Albert Chin-A-Young  <china@thewrittenword.com>

	* config/tc-arm.c (vfp_dp_reg_required_here): Fix typo
	(vfp_sp_reg_pos -> vfp_dp_reg_pos).

2002-03-18  Alexandre Oliva  <aoliva@redhat.com>

	* config/tc-mips.c (md_estimate_size_before_relax): Do not modify
	the EXTENDED bit here; report the estimate according to the
	current size.

2002-03-18  Tom Rix  <trix@redhat.com>

	* configure.in: Add AIX 5 support.
	* config/tc-ppc.c (ppc_target_format): Add AIX 5 64 bit target.
	* config/te-aix5.h: New file. AIX 5 support.
	* configure: Regenerate.

2002-03-18  Nick Clifton  <nickc@cambridge.redhat.com>

	* po/fr.po: Updated version.

2002-03-16  Andreas Jaeger  <aj@suse.de>

	* doc/c-mips.texi (Machine Dependencies): Add new node.

2002-03-15  Chris G. Demetriou  <cgd@broadcom.com>

	* config/tc-mips.c (mips_set_options): New "ase_mips3d" member.
	(mips_opts): Initialize "ase_mips3d" member.
	(file_ase_mips3d): New variable.
	(CPU_HAS_MIPS3D): New macro.
	(md_begin): Initialize mips_opts.ase_mips3d and file_ase_mips3d
	based on command line options and configuration defaults.
	(macro_build, mips_ip): Accept MIPS-3D instructions if
	mips_opts.ase_mips3d is set.
	(OPTION_MIPS3D, OPTION_NO_MIPS3D, md_longopts, md_parse_option):
	Add support for "-mips3d" and "-no-mips3d" options.